# matgenRester

./: README.md  pyproject.toml  setup.py
matgen_rester/: __init__.py  args.py  auth.py  matdata.py  matgenrester.py
matgen_rester/figure/: __Init__.py  test1.py
matgen_rester/structure_properties/: MatgenError.py  __init__.py  band_structure.py  cell.py  conventional_cell_site.py  density_of_states.py  elastic_property.py  magnetization.py  primitive_cell_site.py
matgen_rester/tests/: __init__.py  test_rester.py
