[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matgen_rester"
version = "2.3.0"
authors = [
  { name="nscc.gz", email="matgen@nscc-gz.cn" },
]
description = "A python wrapper for matgen dft API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pypi.org/manage/project/matgen-rester"
"Bug Tracker" = "https://pypi.org/manage/project/matgen-rester/issues"
